# denia

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  DESIGN.md  Makefile  PRODUCT.md  README.md  TODO.md  get.ps1  get.sh  install.sh
.github/workflows/: release.yml
.serena/: project.yml
docs/: security-audit-pingora-2026-05-28.md  security-audit.md
docs/adr/: 001-initial-backend-architecture.md  002-frontend-effect-logic-layer.md  003-linux-runtime-process-runner.md  004-embed-web-console.md  005-runtime-security-hardening.md  006-projects-and-migrations.md  007-ingress-tls.md  008-rbac.md  009-observability.md  010-jobs-scheduler.md  011-inprocess-oci-acquisition.md  012-src-modularization.md  013-domain-verification.md  014-per-service-registry.md  015-streaming-oci-layer-staging.md  016-managed-traefik.md  016-service-crud-api.md  017-service-crud-api.md  018-autoscaling.md  019-runtime-filesystem-isolation.md  020-pingora-ingress.md  021-control-plane-secret-encryption.md  021-oci-layer-cache.md  022-oci-layer-cache.md  023-toml-config-file.md  024-async-deployments.md  024-cli-driven-host-provisioning.md  025-cli-driven-host-provisioning.md  026-privileged-overlay-mount-pre-userns.md  027-daemon-lifecycle-stop-all-and-autostart.md  028-deploy-autoscale-ownership-handoff.md  029-self-update-from-github-release.md  030-cross-platform-client-cli.md  031-hosted-oci-registry.md  032-http2-ingress-hardening.md  033-service-console.md  034-client-driven-deploy-upload.md  034-control-domain-ingress.md  035-client-driven-deploy-upload.md  035-control-domain-ingress.md  (+6 more)
docs/superpowers/plans/: 2026-05-24-denia-backend-v1-deploy-runtime.md  2026-05-25-acquisition-progress-frontend.md  2026-05-25-domain-verification.md  2026-05-25-ingress-tls-frontend.md  2026-05-25-ingress-tls.md  2026-05-25-inprocess-oci-acquisition.md  2026-05-25-jobs-frontend.md  2026-05-25-jobs.md  2026-05-25-observability-frontend.md  2026-05-25-observability.md  2026-05-25-operator-console-frontend.md  2026-05-25-projects-service-grouping-frontend.md  2026-05-25-projects-service-grouping.md  2026-05-25-rbac-frontend.md  2026-05-25-rbac.md  2026-05-25-runtime-security-hardening.md  2026-05-25-runtime-security-posture-frontend.md  2026-05-25-rustix-syscall-refactor.md  2026-05-25-src-modularization.md  2026-05-26-per-service-oci-registry.md  2026-05-27-admin-bootstrap.md  2026-05-27-autoscaling.md  2026-05-27-concrete-repos-drop-traits.md  2026-05-27-live-log-streaming.md  2026-05-27-managed-traefik.md  2026-05-27-service-crud-page.md  2026-05-27-streaming-oci-layer-staging.md  2026-05-28-async-deployments.md  2026-05-28-autoscaling-pingora.md  2026-05-28-denia-binary-subcommands.md  2026-05-28-optional-domain.md  2026-05-28-pingora-ingress.md  2026-05-28-registry-inline-credentials.md  2026-06-03-control-domain-ingress.md  2026-06-03-denia-push-working-tree-deploy.md  2026-06-03-hosted-oci-registry.md  2026-06-03-service-console.md  2026-06-04-general-purpose-ingress.md
docs/superpowers/specs/: 2026-05-25-acquisition-progress-frontend.md  2026-05-25-domain-verification.md  2026-05-25-ingress-tls-frontend.md  2026-05-25-ingress-tls.md  2026-05-25-inprocess-oci-acquisition.md  2026-05-25-jobs-frontend.md  2026-05-25-jobs.md  2026-05-25-observability-frontend.md  2026-05-25-observability.md  2026-05-25-operator-console-frontend.md  2026-05-25-per-service-oci-registry-design.md  2026-05-25-projects-service-grouping-frontend.md  2026-05-25-projects-service-grouping.md  (+19 more)
src/: access_log.rs  app.rs  artifacts.rs  auth.rs  bridge.rs  cgroup_launcher.rs  command.rs  config.rs  daemon.rs  deploy.rs  domain.rs  domains.rs  health.rs  lib.rs  main.rs  metrics.rs  rate_limit.rs  runtime.rs  scheduler.rs  secrets.rs  socket_proxy.rs  state.rs  traefik.rs  web.rs  workload_launcher.rs
src/api/: auth.rs  bootstrap.rs  console.rs  credentials.rs  deployments.rs  domains.rs  error.rs  health.rs  hosted_registry.rs  ingress.rs  jobs.rs  members.rs  mod.rs  node.rs  observability.rs  oci.rs  projects.rs  registries.rs  services.rs  tokens.rs  uploads.rs  users.rs
src/artifacts/: acquirer.rs  mod.rs
src/auth/: credentials.rs  guards.rs  middleware.rs  mod.rs  principal.rs
src/autoscale/: catalog.rs  controller.rs  ledger.rs  lifecycle.rs  mod.rs  registry.rs  scaler.rs  usage.rs
src/cli/: doctor.rs  mod.rs  rotate_token.rs  setup.rs  status.rs  uninstall.rs  update.rs
src/deploy/: coordinator.rs  error.rs  log.rs  mod.rs  routes.rs
src/domain/: console.rs  credential.rs  deployment.rs  error.rs  job.rs  mod.rs  project.rs  registry.rs  service.rs  service_domain.rs  user.rs
src/ingress/: bridge.rs  l4.rs  mod.rs  socket_proxy.rs  traefik_supervisor.rs
src/observability/: access_log.rs  logs.rs  metrics.rs  mod.rs  node_metrics.rs
src/oci/: config.rs  credentials.rs  ecr.rs  gar.rs  layout.rs  mod.rs  pull_to_dir.rs  registry.rs  unpack.rs
src/registry/: api_v2.rs  domain.rs  gc.rs  mod.rs  repo.rs  storage.rs
src/repo/: credential_repo.rs  deployment_repo.rs  domain_repo.rs  error.rs  job_repo.rs  mock.rs  mod.rs  project_repo.rs  registry_repo.rs  service_repo.rs  token_repo.rs  user_repo.rs
src/runtime/: console.rs  error.rs  fake.rs  fs_helpers.rs  linux.rs  mod.rs  plan.rs  runtime_trait.rs  validation.rs
src/syscall/: caps.rs  chown.rs  console.rs  mod.rs  ns.rs  pty.rs  seccomp.rs  signal.rs
src/templates/: buildkit.service.in  config.toml.in  denia.service.in
src/verification/: error.rs  http.rs  mod.rs  validation.rs  verifier.rs
tests/: async_deploy.rs  autoscale_lifecycle.rs  backend_contract.rs  cli_auth.rs  cli_dry_run.rs  cli_push.rs  cli_setup_privileged.rs  client_console.rs  deploy_orchestration.rs  domain_verification.rs  hosted_registry_contract.rs  hosted_registry_gc.rs  hosted_registry_repo.rs  hosted_registry_storage.rs  linux_runtime_privileged.rs  pingora_ingress_e2e.rs  repo_contract.rs
web/: .cta.json  AGENTS.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  vite.config.ts
web/scripts/: prepare-effect.sh
web/src/: routeTree.gen.ts  styles.css
(+137 files in other folders)
